@@ -1,5 +1,6 @@
 Change log 1.4 (under development)
 ----------------------------------
+* Critial bug resolved in the PowerMock JUnit 4.7 runner: Before tests would not be executed at all if a JUnit rule was used in the test (even though it looked like they were). This has now been resolved an thus support for JUnit 4.7 rules should _really_ work.
 
 Change log 1.3 (released 2009-10-06)
 ------------------------------------
